[project]
dependencies = [
  "ocp-vscode==2.6.1", # for CAD modeling
  "build123d==0.8.0",
  "cadquery-ocp",
  "ipdb>=0.13.13",
  "ocp-tessellate>=3.0.11",
]
description = "Arm parts defined by code"
name = "robot-arm-cad"
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"

[tool.uv.sources]
cadquery-ocp = {url = "https://github.com/CadQuery/ocp-build-system/releases/download/7.7.2.1/cadquery_ocp-7.7.2.1-cp312-cp312-macosx_11_0_arm64.whl"}
